# Super-Resolution-1.21.4

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  build.gradle  build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle  settings.gradle.kts
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report_en.yml
.github/workflows/: Build_and_Upload.yml  build_native.yml  gradle.yml
buildSrc/: build.gradle  build.gradle.kts
buildSrc/src/main/groovy/: multiloader-common.gradle  multiloader-loader.gradle  multiversion-neoform.gradle  multiversion.gradle
buildSrc/src/main/kotlin/: multiloader-loader.gradle.kts  multiversion.gradle.kts
common/: build.gradle  build.gradle.kts
common/src/hack/resources/: super_resolution.hack.mixins.json
common/src/irisapi/resources/: super_resolution_irisapi.mixins.json
common/src/main/resources/: pack.mcmeta  super_resolution-imgui-common.mixins.json  super_resolution-resolutioncontrol-common.mixins.json  super_resolution-upscale.mixins.json  super_resolution.accesswidener  super_resolution.mixins.json  super_resolution.shadercompat.mixins.json
configs/: 1.20.1.json  1.20.4.json  1.20.6.json  1.21.1.json  1.21.11.json  1.21.4.json  1.21.5.json  1.21.6.json  1.21.678.json  1.21.8.json  1.21.9.json  26.1.x.json  26.2.json
docs/: CHANGELOG_EN.md  README_EN.md  README_JP.md  SuperResolutionShaderCompatDocsZh.md  sr_utils.glsl
fabric/: build.gradle  build.gradle.kts
fabric/src/main/resources/: fabric.mod.json  super_resolution-fabric-compat.mixins.json  super_resolution-fabric.mixins.json  super_resolution-resolutioncontrol-fabric.mixins.json  super_resolution.accesswidener
forge/: build.gradle  build.gradle.kts
forge/src/main/resources/: pack.mcmeta  super_resolution-forge-compat.mixins.json  super_resolution-forge.mixins.json  super_resolution-resolutioncontrol-forge.mixins.json
fsr2_win64/: ffxFsr2.cpp  fsr2_win64.sln  fsr2_win64.vcxproj  fsr2_win64.vcxproj.filters  io_homo_superresolution_fsr2_nativelib_ffx_fsr2_api.h  pch.h  utils.cpp  utils.h
fsr2_win64/fsr2/gl/: ffx_fsr2_gl.h
fsr2_win64/fsr2/gl/shaders/: ffx_fsr2_shaders_gl.h
fsr2_win64/fsr2/shaders/: ffx_fsr2_accumulate_pass.glsl2  ffx_fsr2_lock_pass.glsl2
fsr2_win64/glad/: glad.h
fsr2_win64/lib/: ffx_fsr2_api_gl_x64d.exp  ffx_fsr2_api_gl_x64d.lib  ffx_fsr2_api_x64d.exp  ffx_fsr2_api_x64d.lib  lib_glad.lib
modules/: build.gradle  settings.gradle
modules/xess/: build.gradle  gradle.properties  settings.gradle
modules/xess/fabric/: build.gradle
modules/xess/neoforge/: build.gradle
native/: README.md  build.gradle  build.gradle.kts
native/cpp/: CMakeLists.txt  README.md  build_android.ps1  build_linux.sh  build_windows.ps1  build_windows_docker.sh  build_windows_on_linux.sh  glslang-commit-hash  init.py
native/cpp/SRNativeDLSS/: CMakeLists.txt
native/cpp/SRNativeDLSS/include/sr/dlss/: dlss.h  sr_provider.h
native/cpp/SRNativeDLSS/src/: dlss.cpp  sr_provider.cpp
native/cpp/SRNativeFSR/: CMakeLists.txt
native/cpp/SRNativeFSR/include/sr/fsr/: fsr.h  fsr2.h  fsr2_internal.h  fsr3.h  sr_provider.h
native/cpp/SRNativeFSR/libraries/win64/: ffx_fsr1_x64.lib  ffx_fsr1_x64d.lib  ffx_fsr2_x64.lib  ffx_fsr2_x64d.lib  ffx_fsr3upscaler_x64.lib  ffx_fsr3upscaler_x64d.lib
native/cpp/SRNativeFSR/src/: fsr.cpp  fsr2.cpp  fsr2ogl.cpp  fsr2vk.cpp  fsr3.cpp  sr_provider.cpp
native/cpp/SRNativeFSROgl/: CMakeLists.txt
native/cpp/SRNativeFSROgl/include/sr/fsr/: fsr.h  fsr2ogl.h  sr_provider.h
native/cpp/SRNativeFSROgl/libraries/win64/: ffx_fsr2_api_gl_x64.lib  ffx_fsr2_api_gl_x64d.lib  ffx_fsr2_api_x64.lib  ffx_fsr2_api_x64d.lib
native/cpp/SRNativeFSROgl/src/: fsr2ogl.cpp
native/cpp/SRNativeMain/: CMakeLists.txt
native/cpp/SRNativeMain/include/: define.h  io_homo_superresolution_core_SuperResolutionNative.h  io_homo_superresolution_thirdparty_nanovg_NanoVGColor.h  io_homo_superresolution_thirdparty_nanovg_NanoVGContext.h  io_homo_superresolution_thirdparty_nanovg_NanoVGPaint.h  jni_header.h  sr_api_jni.h  utils.h
native/cpp/SRNativeMain/include/nvg/: all.h  fontstash.h  gl_funcs.h  nanovg.h  nanovg_gl.h
native/cpp/SRNativeMain/include/sr/: sr_api.h  sr_api_enums.h  sr_api_functions.h  sr_api_structs.h  sr_api_types.h  sr_modules.h
native/cpp/SRNativeMain/src/: glslang.cpp  main.cpp  modules.cpp  sr_api.cpp  sr_api_jni.cpp  utils.cpp
native/cpp/SRNativeMain/src/nvg/: all.cpp  gl_funcs.cpp  nanovg.cpp  nvg_jni.cpp
native/cpp/SRNativeXeSS/: CMakeLists.txt
native/cpp/SRNativeXeSS/include/sr/xess/: sr_provider.h  xess.h
native/cpp/SRNativeXeSS/src/: sr_provider.cpp  xess.cpp
native/cpp/docs/: add_upscale_provider.md  build.md
native/cpp/include/: define.h  jni_header.h  oiiaio_fsr_jni.h  utils.h
native/cpp/src/: ffxFsr2.cpp  fsr2.cpp  fsr2ogl.cpp  fsr2vk.cpp  glslang.cpp  main.cpp  shader_compiler.cpp  utils.cpp
native/cpp/src/ffx-fsr2-api/: CMakeLists.txt  ffx_error.h  ffx_fsr2.cpp  ffx_fsr2.h
native/cpp/src/ffx-fsr2-api/gl/: CMakeLists.txt  ffx_fsr2_gl.cpp  ffx_fsr2_gl.h
native/cpp/src/ffx-fsr2-api/gl/shaders/: ffx_fsr2_shaders_gl.cpp
native/cpp/src/ffx-fsr2-api/shaders/: ffx_fsr2_autogen_reactive_pass.glsl2  ffx_fsr2_callbacks_glsl2.h  ffx_fsr2_compute_luminance_pyramid_pass.ogl.glsl  ffx_fsr2_depth_clip_pass.glsl2  ffx_fsr2_rcas_pass.glsl2  ffx_fsr2_reconstruct_previous_depth_pass.ogl.glsl  ffx_fsr2_resources.h  ffx_fsr2_tcr_autogen_pass.glsl2
native/cpp/src/ffx-fsr2-api/vk/: CMakeLists.txt  ffx_fsr2_vk.cpp  ffx_fsr2_vk.h
native/cpp/tools/: FidelityFX_SC.py  FidelityFX_SC.sh
neoforge/: build.gradle  build.gradle.kts
neoforge/src/main/resources/: super_resolution-forge-compat.mixins.json  super_resolution-forge.mixins.json  super_resolution-neoforge-compat.mixins.json  (+1 more)
script/: action_uploader.py  buildAll.py  download_libraries.py  java_tool_wrapper.sh  upload.py  uploader_mcmod.py  utils.py
versionConfigs/: 1.20.1.json  1.20.1.properties  1.20.4.json  1.20.4.properties  1.21.1.json  1.21.1.properties  1.21.4.json  1.21.4.properties  1.21.5.json
(+1702 files in other folders)
